span footer spacing bug.
A while ago I changed the footer label tags to span tags for
accessibility. I forgot to change the styling, so now there is spacing
in between the links in the footer.

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -23,7 +23,7 @@ footer {
     width: 100%;
     padding: 10px;
 
-    & .other-links label {
+    & .other-links span {
         margin-right: 16px;
     }
 
